Fix dropdown box having invisible (white on white) text

--- a/src/main/resource/foodstart/ui/main.css
+++ b/src/main/resource/foodstart/ui/main.css
@@ -80,3 +80,7 @@
 .list-cell {
 	-fx-text-fill: white;
 }
+
+.list-view .list-cell {
+	-fx-text-fill: black;
+}
